<resources>
    <string name="app_name">Pomodoro Focus</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="timer">Timer</string>
    <string name="log_out">Log Out</string>
    <string name="start">Start</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="name">Name</string>
    <string name="streak_icon">Streak icon</string>
    <string name="total_time_icon">Total time icon</string>
    <string name="pom_length">25:00</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="focus">Focus</string>
    <string name="lengths">Lengths</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="save">Save</string>
    <string name="logging_in">Logging In…</string>
    <string name="signing_up">Signing Up…</string>
    <string name="logging_out">Logging Out…</string>
    <string name="streak">Streak</string>
    <string name="minutes_focused">Minutes Focused</string>
    <string name="history">History</string>
    <string name="this_weeks_focuses">This Week\'s Focuses</string>
    <string name="total_focus_log">Total Focus Log</string>
    <string name="loading_hyphens">--</string>
    <string name="settings">Settings</string>
    <string name="edit_icon_shadow">Edit icon shadow</string>
    <string name="edit_icon">Edit icon</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_desc">If on, the screen will stay on whenever the timer is running and the application is open.</string>
    <string name="focus_mode_desc">In focus mode, the timer automatically cancels when you close the app. The timer will continue if the device goes into sleep mode.</string>
    <string name="focus_mode">Focus Mode</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="accept">Accept</string>
    <string name="respond_to_request">Respond to Friend Request</string>
    <string name="cancel_request">Cancel Friend Request</string>
    <string name="decline">Decline</string>
    <string name="all">All</string>
    <string name="friends">Friends</string>
    <string name="no_friend_requests_pending">No friend requests pending</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="enter_name_or_handle">Enter name or handle</string>
    <string name="search">Search</string>
    <string name="check_pending_requests">Check Pending Requests</string>
    <string name="min">min</string>
    <string name="private_mode_desc">In private mode, users will only be able to see your profile picture, name, and handle. If you accept being friends, they will then be able to see your achievement progress, streaks, and focus totals.</string>
    <string name="private_mode">Private Mode</string>
    <string name="timer_lengths_in_minutes">Timer Lengths in Minutes</string>
    <string name="level">level</string>
    <string name="skip_break">Skip Break</string>
    <string name="hide_leaderboard_desc">When on, you will not appear on anyone\'s \"All\" leaderboard. You will still appear on your friends\' \"Friends\" leaderboards.</string>
    <string name="hide_leaderboard">Hide From Leaderboard</string>
    <string name="hide_skip_desc">Find yourself tempted to skip every break and end up burning yourself out? Turning on this setting will hide the skip button for you!</string>
    <string name="hide_skip">Hide Skip Break Button</string>
    <string name="timer_lengths_desc">To change timer lengths, double tap or long press the numbers above.</string>
    <string name="cancel_timer">Cancel Timer</string>
</resources>